[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/enemies/skeleton/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/HitBox.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/JumpingDamageZone.gd" type="Script" id=3]
[ext_resource path="res://engine/Physics2D.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/skeleton/sprites/spr_skeleton_walk_anim.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/skeleton/states/motion/on-ground/patrol.gd" type="Script" id=6]
[ext_resource path="res://characters/commons/states/motion/combat/death.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 29 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.506, 25.8774 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 26.5091, 4.40568 )

[node name="Skeleton" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Patrol = SubResource( 2 )
anims/SETUP = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.99678, 5.98062 )
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -0.138885, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.429276, 9.22946 )
shape = SubResource( 4 )

[node name="JumpingDamageZone" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpingDamageZone"]
position = Vector2( -0.599792, -21.0615 )
shape = SubResource( 5 )

[node name="Physics2D" type="Node2D" parent="."]
script = ExtResource( 4 )
GRAVITY = 1.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 8

[node name="States" type="Node2D" parent="."]

[node name="Patrol" type="Node2D" parent="States"]
script = ExtResource( 6 )

[node name="Death" type="Node2D" parent="States"]
script = ExtResource( 7 )

